--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
     <header class="center">
         <div class="header">
             <div class="currency-header">
-                <!-- <div class="custom-select">
-                    <div class="center currency">
-                        <span>TH - THB</span>
-                        <svg width="10" height="10" viewBox="0 0 7 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M3.03109 3.75L9.53674e-07 0H6.06218L3.03109 3.75Z" fill="black"/>
-                        </svg>
-                    </div>
-                    <div class="center currency-dropdown">
-                        <span>US - USD</span>
-                    </div>
-                </div> -->
                 <div class="custom-select">
                     <input type="checkbox" id="currency-inner-toggle" class="currency-check" hidden>
 
@@ -178,27 +167,22 @@
 
     <div class="spacer"></div>
     <div class="section4">
-        <!-- <div class="section4-container1 collect4" style="position: relative; width: 978px; height: 475px;"> -->
         <div class="section4-container1 collect4" style="position: relative;">
             <div class="collect4-text">COLLECTION 01</div>
             <!-- width="978px" height="475px" -->
-            <img src="asset/section4.jpg" alt="">
+            <img src="asset/section4.jpg" alt="COLLECTION 01">
             <video src="asset/DTS_THE_LEADER_Joey_Bania_Clips_ID11.mp4" class="collect4-hv" autoplay loop muted></video>
         </div>
 
         <div class="section4-container2">
             <!-- width: 454px; height: 455px; -->
-            <!-- <div style="position: relative;  width: 454px; height: 455px;" class="collect4"> -->
             <div style="position: relative;" class="collect4 collection-bg-1">
                 <div class="collect4-text">COLLECTION <br>02</div>
-                <!-- <img src="asset/collection4a-sm.jpg" alt=""> -->
-                <img src="asset/collection4-2hover.jpg" class="collect4-hv" alt="">
+                <img src="asset/collection4-2hover.jpg" class="collect4-hv" alt="COLLECTION 02">
             </div>
-            <!-- <div style="position: relative;  width: 454px; height: 455px;" class="collect4"> -->
             <div style="position: relative;" class="collect4 collection-bg-2">
                 <div class="collect4-text">COLLECTION <br>03</div>
-                <!-- <img src="asset/collection4b-sm.jpg" alt=""> -->
-                <img src="asset/collection4-2hover.jpg" class="collect4-hv" alt="">
+                <img src="asset/collection4-2hover.jpg" class="collect4-hv" alt="COLLECTION 03">
             </div>
         </div>
     </div>
@@ -361,7 +345,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam ornare, nisl non rhoncus <br>commodo.</p>
             </div>
             <form action="">
-                <div style="text-align: start; display: flex; gap: 20px; align-content: center;">
+                <div style="text-align: start; gap: 20px; display: flex; align-content: center;">
                     <label class="custom-radio">
                         <input type="radio" name="group-contact" id="contact-onsite" checked>
                         <span class="radio-mark"></span> Onsite
