fix: mobile header currency

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="currency-header">
                 <div class="custom-select">
-                    <input type="checkbox" id="currency-inner-toggle" class="currency-check" hidden>
+                    <input type="checkbox" id="currency-inner-toggle" class="currency-check">
 
                     <label class="center currency">
                         <span>TH - THB</span>
