fix: mobile header currency2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="custom-select">
                     <input type="checkbox" id="currency-inner-toggle" class="currency-check">
 
-                    <label class="center currency">
+                    <label for="currency-inner-toggle" class="center currency">
                         <span>TH - THB</span>
                         <svg width="10" height="10" viewBox="0 0 7 4" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M3.03109 3.75L9.53674e-07 0H6.06218L3.03109 3.75Z" fill="black"/>
