update: font add 'Hanken Grotesk'

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div style="width: 100%; display: flex; justify-content: center;">
             <div class="section2-container">
                 <div class="text-overlay">
-                    <div class="section2-text">NEW</div>
+                    <div class="section2-text hanken-header">NEW</div>
                 </div>
                 <img src="asset/section2.jpg" alt="" class="section2-img">
             </div>
@@ -153,7 +153,7 @@
     <div class="section3">
         <div style="position: relative;">
             <div class="text-overlay">
-                <div class="section3-text">BESTSELLER</div>
+                <div class="section3-text hanken-header">BESTSELLER</div>
             </div>
             <div class="section3-video">
                 <video src="asset/DTS_THE_LEADER_Joey_Bania_Clips_ID10.mp4" autoplay loop muted></video>
@@ -168,7 +168,7 @@
     <div class="spacer"></div>
     <div class="section4">
         <div class="section4-container1 collect4" style="position: relative;">
-            <div class="collect4-text">COLLECTION 01</div>
+            <div class="collect4-text hanken-header">COLLECTION 01</div>
             <!-- width="978px" height="475px" -->
             <img src="asset/section4.jpg" alt="COLLECTION 01">
             <video src="asset/DTS_THE_LEADER_Joey_Bania_Clips_ID11.mp4" class="collect4-hv" autoplay loop muted></video>
@@ -177,11 +177,11 @@
         <div class="section4-container2">
             <!-- width: 454px; height: 455px; -->
             <div style="position: relative;" class="collect4 collection-bg-1">
-                <div class="collect4-text">COLLECTION <br>02</div>
+                <div class="collect4-text hanken-header">COLLECTION <br>02</div>
                 <img src="asset/collection4-2hover.jpg" class="collect4-hv" alt="COLLECTION 02">
             </div>
             <div style="position: relative;" class="collect4 collection-bg-2">
-                <div class="collect4-text">COLLECTION <br>03</div>
+                <div class="collect4-text hanken-header">COLLECTION <br>03</div>
                 <img src="asset/collection4-2hover.jpg" class="collect4-hv" alt="COLLECTION 03">
             </div>
         </div>
@@ -190,7 +190,7 @@
     <div class="spacer"></div>
     <div class="section5">
         <div class="scrolling-text">
-            <div class="scrolling-content">
+            <div class="scrolling-content hanken-header">
                 <span>BEST SELLNG</span>
                 <svg width="85" height="85" viewBox="0 0 85 85" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.1667 38.9583V46.0416H56.6667V53.1249H63.75V46.0416H70.8334V38.9583H63.75V31.8749H56.6667V38.9583H14.1667ZM49.5834 24.7916H56.6667V31.8749H49.5834V24.7916ZM49.5834 24.7916H42.5V17.7083H49.5834V24.7916ZM49.5834 60.2083H56.6667V53.1249H49.5834V60.2083ZM49.5834 60.2083H42.5V67.2916H49.5834V60.2083Z" fill="white"/>
@@ -241,7 +241,7 @@
     <div class="section7">
         <div class="spacer"></div>
         <div class="section7-header">
-            <h1>FREQUENTLY ASKED QUESTIONS</h1>
+            <h1 class="hanken-header">FREQUENTLY ASKED QUESTIONS</h1>
             <p style="padding: 10px 0;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare, nisl non rhoncus commodo.</p>
         </div>
         <div class="faq-tab">
@@ -341,7 +341,7 @@
         
         <div class="section8-container">
             <div class="section8-container-text">
-                <h2>MAME AN <br> INQURY</h2>
+                <h2 class="hanken-header">MAME AN <br> INQURY</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam ornare, nisl non rhoncus <br>commodo.</p>
             </div>
             <form action="">
