update: form-contact

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
                 <div class="term-group">
                     <label class="custom-checkbox">
-                        <input type="checkbox">
+                        <input type="checkbox" required>
                         <span class="checkbox-mark"></span>
                         <span>I agree to all terms & conditions</span>
                     </label>
